--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,13 +1,96 @@
+:root {
+  --black: #222222;
+  --greyVeryLight: #E8E8E8;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+html {
+  font-size: 62.5%;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  min-height: 100vh;
+  font-size: 10px;
+  font-family: system-ui, -apple-system, "Segoe UI", Roboto, Ubuntu, Cantarell, "Noto Sans", sans-serif, system-ui, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  letter-spacing: 0.05em;
+  position: relative;
+  color: var(--black);
+}
+
+
+html,
+body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+p {
+  margin: 0 0 2rem;
+  font-size: 1.8rem;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+a {
+   color: inherit;
+   text-decoration: none;
+   font-size: 1.8rem;
+   font-weight: 600;
+}
+
+button  {
+   background: transparent;
+   font-weight: 600;
+   line-height:  4rem;
+   border: none;
+   font-size: 2rem;
+   text-transform: capitalize;
+   cursor: pointer;
+   outline: 0;
+   transform: translateY(-1px);
+   transition: transform 0.3s ease;
+
+  &:active {
+     transform: translateY(1px);
+  }
+}
+
+
+.section {
+  padding: 5rem 0;
+}
+
+.heading {
+    margin: 0 0 3rem;
+    font-size: 5rem;
+}
+
+.container {
+   max-width: 1450px;
+   margin: 0 auto;
+   width: 100%;
+   padding: 0 20px;
+}
+
+.container-sm {
+  max-width: 500px;
+  margin: 0 auto;
+
+}
+
+.responsive-img {
+   max-width: 100%;
+   height: auto;
+
 }
