--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,6 +1,30 @@
 /* autoprefixer grid: autoplace */
 
 .root {
-    display: grid;
-    grid-template-columns: 50px 1fr;
+  border-bottom: 1px solid var(--greyVeryLight);
+}
+
+.wrapper {
+  display: grid;
+  grid-template-columns: auto minmax(0px, 1fr);
+  grid-column-gap: 50px;
+}
+
+.logo {
+
+}
+
+.logoText {
+  font-size: 4rem;
+  line-height: 60px;
+}
+
+.navigations {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.navigations a {
+   line-height: 60px;
 }
