--- a/src/pages/Upload/Upload.module.scss
+++ b/src/pages/Upload/Upload.module.scss
@@ -25,9 +25,19 @@
    }
 }
 
+.spinner {
+   height: 25px;
+   width: 25px;
+   border-radius: 50%;
+}
 
 .header {
-    justify-content: flex-end;
+   display: flex;
+}
+
+.uploadBtn {
+   align-self: flex-end;
+   margin: 0 0 0 auto;
 }
 
 .inputWrapper {
